--- a/index.html
+++ b/index.html
@@ -20,6 +20,18 @@
     <script type="text/babel">
         var MessageBox = React.createClass({
 
+            handleAdd: function(e) {
+                var newMessage = this.refs.newMessage.getDOMNode().value;
+
+                var newMessages = this.state.messages.concat([newMessage]);
+
+                console.log(newMessages);
+
+                this.setState({
+                    messages: newMessages
+                });
+            },
+
             getInitialState: function() {
                 return {
                     isVisible: true,
@@ -44,7 +56,8 @@
                 return (
                     <div className="container jumbotron" style={inlineStyles}>
                         <h2>Hello, World</h2>
-
+                        <input ref="newMessage" type="text" />
+                        <button className="btn btn-primary" onClick={this.handleAdd}>Add</button>
                         { messages }
                     </div>
                 );
